--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "antd": "^4.18.2",
+    "chart.js": "^3.7.0",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.0",
