--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.8",
     "antd": "^4.18.2",
     "chart.js": "^3.7.0",
+    "firebase": "^9.6.6",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
