--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.7.0",
     "firebase": "^9.6.6",
     "history": "^5.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
